Use Stream.toList and List.of instead of Collectors.toList and Arrays.asList in tests