@@ -40,13 +40,10 @@ import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collector;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -170,9 +167,9 @@ class RemoteRootKeyTest extends RegistryKeyTestBase {
 
             RegistryKey registryKey = remoteRoot;
             try (Stream<RegistryKey> stream = registryKey.subKeys()) {
-                List<RegistryKey> subKeys = stream.collect(Collectors.toList());
+                List<RegistryKey> subKeys = stream.toList();
 
-                List<RegistryKey> expected = Arrays.asList(
+                List<RegistryKey> expected = List.of(
                         registryKey.resolve("child1"),
                         registryKey.resolve("child2"),
                         registryKey.resolve("child3")
@@ -205,8 +202,7 @@ class RemoteRootKeyTest extends RegistryKeyTestBase {
 
             RegistryKey registryKey = remoteRoot;
             try (Stream<RegistryKey> stream = registryKey.subKeys()) {
-                Collector<RegistryKey, ?, ?> collector = Collectors.toList();
-                NoSuchRegistryKeyException exception = assertThrows(NoSuchRegistryKeyException.class, () -> stream.collect(collector));
+                NoSuchRegistryKeyException exception = assertThrows(NoSuchRegistryKeyException.class, stream::toList);
                 assertEquals("HKEY_LOCAL_MACHINE", exception.path());
                 assertEquals("test-machine", exception.machineName());
             }
@@ -222,9 +218,9 @@ class RemoteRootKeyTest extends RegistryKeyTestBase {
         void testMaxDepthIsZero() {
             RegistryKey registryKey = remoteRoot;
             try (Stream<RegistryKey> stream = registryKey.traverse(0)) {
-                List<RegistryKey> registryKeys = stream.collect(Collectors.toList());
+                List<RegistryKey> registryKeys = stream.toList();
 
-                List<RegistryKey> expected = Arrays.asList(registryKey);
+                List<RegistryKey> expected = List.of(registryKey);
 
                 assertEquals(expected, registryKeys);
             }
@@ -244,9 +240,9 @@ class RemoteRootKeyTest extends RegistryKeyTestBase {
 
                 RegistryKey registryKey = remoteRoot;
                 try (Stream<RegistryKey> stream = registryKey.traverse(1, RegistryKey.TraverseOption.SUB_KEYS_FIRST)) {
-                    List<RegistryKey> registryKeys = stream.collect(Collectors.toList());
+                    List<RegistryKey> registryKeys = stream.toList();
 
-                    List<RegistryKey> expected = Arrays.asList(
+                    List<RegistryKey> expected = List.of(
                             registryKey.resolve("subKey1"),
                             registryKey.resolve("subKey2"),
                             registryKey.resolve("subKey3"),
@@ -264,9 +260,9 @@ class RemoteRootKeyTest extends RegistryKeyTestBase {
 
                 RegistryKey registryKey = remoteRoot;
                 try (Stream<RegistryKey> stream = registryKey.traverse(1)) {
-                    List<RegistryKey> registryKeys = stream.collect(Collectors.toList());
+                    List<RegistryKey> registryKeys = stream.toList();
 
-                    List<RegistryKey> expected = Arrays.asList(
+                    List<RegistryKey> expected = List.of(
                             registryKey,
                             registryKey.resolve("subKey1"),
                             registryKey.resolve("subKey2"),
@@ -307,9 +303,9 @@ class RemoteRootKeyTest extends RegistryKeyTestBase {
 
                 RegistryKey registryKey = remoteRoot;
                 try (Stream<RegistryValue> stream = registryKey.values()) {
-                    List<RegistryValue> values = stream.collect(Collectors.toList());
+                    List<RegistryValue> values = stream.toList();
 
-                    List<RegistryValue> expected = Arrays.asList(stringValue, binaryValue, wordValue);
+                    List<RegistryValue> expected = List.of(stringValue, binaryValue, wordValue);
 
                     assertEquals(expected, values);
                 }
@@ -327,9 +323,9 @@ class RemoteRootKeyTest extends RegistryKeyTestBase {
                 RegistryKey registryKey = remoteRoot;
                 RegistryValue.Filter filter = RegistryValue.filter().name(s -> s.contains("i"));
                 try (Stream<RegistryValue> stream = registryKey.values(filter)) {
-                    List<RegistryValue> values = stream.collect(Collectors.toList());
+                    List<RegistryValue> values = stream.toList();
 
-                    List<RegistryValue> expected = Arrays.asList(stringValue, binaryValue);
+                    List<RegistryValue> expected = List.of(stringValue, binaryValue);
 
                     assertEquals(expected, values);
                 }
@@ -347,9 +343,9 @@ class RemoteRootKeyTest extends RegistryKeyTestBase {
                 RegistryKey registryKey = remoteRoot;
                 RegistryValue.Filter filter = RegistryValue.filter().strings().words();
                 try (Stream<RegistryValue> stream = registryKey.values(filter)) {
-                    List<RegistryValue> values = stream.collect(Collectors.toList());
+                    List<RegistryValue> values = stream.toList();
 
-                    List<RegistryValue> expected = Arrays.asList(stringValue, wordValue);
+                    List<RegistryValue> expected = List.of(stringValue, wordValue);
 
                     assertEquals(expected, values);
                 }
@@ -379,8 +375,7 @@ class RemoteRootKeyTest extends RegistryKeyTestBase {
 
             RegistryKey registryKey = remoteRoot;
             try (Stream<RegistryValue> stream = registryKey.values()) {
-                Collector<RegistryValue, ?, ?> collector = Collectors.toList();
-                NoSuchRegistryKeyException exception = assertThrows(NoSuchRegistryKeyException.class, () -> stream.collect(collector));
+                NoSuchRegistryKeyException exception = assertThrows(NoSuchRegistryKeyException.class, stream::toList);
                 assertEquals("HKEY_LOCAL_MACHINE", exception.path());
                 assertEquals("test-machine", exception.machineName());
             }
