@@ -48,8 +48,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collector;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -232,9 +230,9 @@ class SubKeyTest extends RegistryKeyTestBase {
 
             RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER.resolve("Software\\JavaSoft\\Prefs");
             try (Stream<RegistryKey> stream = registryKey.subKeys()) {
-                List<RegistryKey> subKeys = stream.collect(Collectors.toList());
+                List<RegistryKey> subKeys = stream.toList();
 
-                List<RegistryKey> expected = Arrays.asList(
+                List<RegistryKey> expected = List.of(
                         registryKey.resolve("child1"),
                         registryKey.resolve("child2"),
                         registryKey.resolve("child3")
@@ -313,8 +311,7 @@ class SubKeyTest extends RegistryKeyTestBase {
 
             RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER.resolve("path\\failure");
             try (Stream<RegistryKey> stream = registryKey.subKeys()) {
-                Collector<RegistryKey, ?, ?> collector = Collectors.toList();
-                NoSuchRegistryKeyException exception = assertThrows(NoSuchRegistryKeyException.class, () -> stream.collect(collector));
+                NoSuchRegistryKeyException exception = assertThrows(NoSuchRegistryKeyException.class, stream::toList);
                 assertEquals("HKEY_CURRENT_USER\\path\\failure", exception.path());
             }
 
@@ -332,9 +329,9 @@ class SubKeyTest extends RegistryKeyTestBase {
         void testMaxDepthIsZero() {
             RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER.resolve("path");
             try (Stream<RegistryKey> stream = registryKey.traverse(0)) {
-                List<RegistryKey> registryKeys = stream.collect(Collectors.toList());
+                List<RegistryKey> registryKeys = stream.toList();
 
-                List<RegistryKey> expected = Arrays.asList(registryKey);
+                List<RegistryKey> expected = List.of(registryKey);
 
                 assertEquals(expected, registryKeys);
             }
@@ -356,9 +353,9 @@ class SubKeyTest extends RegistryKeyTestBase {
 
                 RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER.resolve("path");
                 try (Stream<RegistryKey> stream = registryKey.traverse(1, RegistryKey.TraverseOption.SUB_KEYS_FIRST)) {
-                    List<RegistryKey> registryKeys = stream.collect(Collectors.toList());
+                    List<RegistryKey> registryKeys = stream.toList();
 
-                    List<RegistryKey> expected = Arrays.asList(
+                    List<RegistryKey> expected = List.of(
                             registryKey.resolve("subKey1"),
                             registryKey.resolve("subKey2"),
                             registryKey.resolve("subKey3"),
@@ -383,9 +380,9 @@ class SubKeyTest extends RegistryKeyTestBase {
 
                 RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER.resolve("path");
                 try (Stream<RegistryKey> stream = registryKey.traverse(1)) {
-                    List<RegistryKey> registryKeys = stream.collect(Collectors.toList());
+                    List<RegistryKey> registryKeys = stream.toList();
 
-                    List<RegistryKey> expected = Arrays.asList(
+                    List<RegistryKey> expected = List.of(
                             registryKey,
                             registryKey.resolve("subKey1"),
                             registryKey.resolve("subKey2"),
@@ -439,9 +436,9 @@ class SubKeyTest extends RegistryKeyTestBase {
 
                 RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER.resolve("path");
                 try (Stream<RegistryKey> stream = registryKey.traverse(RegistryKey.TraverseOption.SUB_KEYS_FIRST)) {
-                    List<RegistryKey> registryKeys = stream.collect(Collectors.toList());
+                    List<RegistryKey> registryKeys = stream.toList();
 
-                    List<RegistryKey> expected = Arrays.asList(
+                    List<RegistryKey> expected = List.of(
                             registryKey.resolve("subKey1\\subKey11"),
                             registryKey.resolve("subKey1\\subKey12"),
                             registryKey.resolve("subKey1\\subKey13"),
@@ -523,9 +520,9 @@ class SubKeyTest extends RegistryKeyTestBase {
 
                 RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER.resolve("path");
                 try (Stream<RegistryKey> stream = registryKey.traverse(Integer.MAX_VALUE)) {
-                    List<RegistryKey> registryKeys = stream.collect(Collectors.toList());
+                    List<RegistryKey> registryKeys = stream.toList();
 
-                    List<RegistryKey> expected = Arrays.asList(
+                    List<RegistryKey> expected = List.of(
                             registryKey,
                             registryKey.resolve("subKey1"),
                             registryKey.resolve("subKey1\\subKey11"),
@@ -604,9 +601,9 @@ class SubKeyTest extends RegistryKeyTestBase {
 
                 RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER.resolve("Software\\JavaSoft\\Prefs");
                 try (Stream<RegistryValue> stream = registryKey.values()) {
-                    List<RegistryValue> values = stream.collect(Collectors.toList());
+                    List<RegistryValue> values = stream.toList();
 
-                    List<RegistryValue> expected = Arrays.asList(stringValue, binaryValue, wordValue);
+                    List<RegistryValue> expected = List.of(stringValue, binaryValue, wordValue);
 
                     assertEquals(expected, values);
                 }
@@ -629,9 +626,9 @@ class SubKeyTest extends RegistryKeyTestBase {
                 RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER.resolve("Software\\JavaSoft\\Prefs");
                 RegistryValue.Filter filter = RegistryValue.filter().name(s -> s.contains("i"));
                 try (Stream<RegistryValue> stream = registryKey.values(filter)) {
-                    List<RegistryValue> values = stream.collect(Collectors.toList());
+                    List<RegistryValue> values = stream.toList();
 
-                    List<RegistryValue> expected = Arrays.asList(stringValue, binaryValue);
+                    List<RegistryValue> expected = List.of(stringValue, binaryValue);
 
                     assertEquals(expected, values);
                 }
@@ -654,9 +651,9 @@ class SubKeyTest extends RegistryKeyTestBase {
                 RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER.resolve("Software\\JavaSoft\\Prefs");
                 RegistryValue.Filter filter = RegistryValue.filter().strings().words();
                 try (Stream<RegistryValue> stream = registryKey.values(filter)) {
-                    List<RegistryValue> values = stream.collect(Collectors.toList());
+                    List<RegistryValue> values = stream.toList();
 
-                    List<RegistryValue> expected = Arrays.asList(stringValue, wordValue);
+                    List<RegistryValue> expected = List.of(stringValue, wordValue);
 
                     assertEquals(expected, values);
                 }
@@ -779,8 +776,7 @@ class SubKeyTest extends RegistryKeyTestBase {
 
             RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER.resolve("path\\failure");
             try (Stream<RegistryValue> stream = registryKey.values()) {
-                Collector<RegistryValue, ?, ?> collector = Collectors.toList();
-                NoSuchRegistryKeyException exception = assertThrows(NoSuchRegistryKeyException.class, () -> stream.collect(collector));
+                NoSuchRegistryKeyException exception = assertThrows(NoSuchRegistryKeyException.class, stream::toList);
                 assertEquals("HKEY_CURRENT_USER\\path\\failure", exception.path());
             }
 
@@ -2020,7 +2016,7 @@ class SubKeyTest extends RegistryKeyTestBase {
         );
         registryKeys.sort(null);
 
-        List<RegistryKey> expected = Arrays.asList(
+        List<RegistryKey> expected = List.of(
                 RegistryKey.HKEY_CURRENT_USER,
                 RegistryKey.HKEY_CURRENT_USER.resolve("Software"),
                 RegistryKey.HKEY_CURRENT_USER.resolve("Software\\JavaSoft"),
